--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ composeBom = "2023.08.00"
 recyclerview = "1.3.2"
 androidx-test = "1.5.0"
 androidx-test-ext = "1.1.5"
+composeVersion = "1.6.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -30,6 +31,8 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 androidx-test-core = { group = "androidx.test", name = "core", version.ref = "androidx-test" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext" }
+androidx-test-compose = { group = "androidx.compose.ui:ui-test-junit4", name = "junit-compose", version.ref = "composeVersion"}
+androidx-test-compose-ui = { group = "androidx.compose.ui:ui-test-manifest", name = "compose-ui-test", version.ref = "composeVersion"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
